Fix text with form column layout issue

--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -105,6 +105,17 @@
     & > * {
       flex-basis: 100%;
     }
+    form {
+      display: grid;
+      column-gap: 1rem;
+      grid-template-columns: 1fr;
+      div:last-of-type {
+        grid-column: 1 / -1;
+      }
+      @include desktop() {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
     .textContent {
       padding: 0 1rem;
       h1,
@@ -149,13 +160,7 @@
       & > * {
         margin: 0 auto;
         max-width: 100vw;
-        display: grid;
         width: 100%;
-        grid-template-columns: 1fr;
-        position: relative;
-        @include desktop() {
-          grid-template-columns: repeat(2, 1fr);
-        }
         & > div {
           max-width: unset !important;
           padding: 0 0.5rem !important;
